[project]
name = "wheelers-landing"
version = "0.1.0"
description = "Wheelers landing page — a full-stack rental SaaS marketing site for the UAE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic[email]>=2.13.4",
    "granian>=1.5",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "aiosmtplib>=3.0",
    "pydantic-settings>=2.14.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "granian[reload]>=2.7.6",
]
